<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for update expense type -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:background="@drawable/money2">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expType"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ff0000ff" />

    <EditText
        android:id="@+id/ueptype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/des"
         android:textColor="#ff0000ff"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/udes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </EditText>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/keypad1"
            android:onClick="update"
            android:text="@string/update"
            android:textColor="#ffff0000" />

    </LinearLayout>

</LinearLayout>