<?xml version="1.0" encoding="utf-8"?>
<!-- This layout is used for displaying all types of 
   expense_category names in a listview -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" android:background="@drawable/money2">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="WEL COME TO MOBILE ACCOUNT MANAGEMENT SYSTEM"
        android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@color/front"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/hnewExpenseType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/keypad1"
            android:onClick="addNewExpType"
            android:text="@string/addNewExpenseType" />

        <Button
            android:id="@+id/hReport"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/keypad1"
            android:onClick="hReport"
            android:text="@string/report" />

        <Button
            android:id="@+id/changePwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/keypad1"
            android:onClick="changePwd"
            android:text="@string/changePwd" />

    </LinearLayout>

    <ListView
        android:id="@+id/hlist"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:keepScreenOn="false" >
    </ListView>

</LinearLayout>